Correction: Lowers notable specificity in dark mode
Removes element type (aside).

--- a/less/v2/dark/journal.less
+++ b/less/v2/dark/journal.less
@@ -22,7 +22,7 @@
 
   .fvtt:is(.advice, .narrative, .quest) { background: var(--dnd5e-color-blue-gray-4); }
 
-  aside.notable {
+  .notable {
     border-color: #212121;
     border-width: 2px 1px;
     background: var(--dnd5e-color-blue-gray-4);
